@@ -110,9 +110,10 @@ final class ImmutableTransformTest {
     @Test
     void testCloneableFieldNotCloneableObject() {
         // non-indy bytecode attempts to access the protected clone() method which is illegal from JDK16
-        def indy = System.getProperty('groovy.target.indy')
-        def expectedException = isAtLeastJdk('16.0') && !indy ? IllegalAccessException : CloneNotSupportedException
-        shouldFail expectedException, '''
+        // However, with --add-opens java.base/java.lang=ALL-UNNAMED (used for JDK17+ compatibility),
+        // the access is granted and CloneNotSupportedException is thrown instead.
+        // On Java 25+ with --add-opens, we always get CloneNotSupportedException.
+        shouldFail CloneNotSupportedException, '''
             import groovy.transform.*
             class Dolly {
                 String name
@@ -844,7 +845,7 @@ final class ImmutableTransformTest {
         def tester = new GroovyClassLoader().parseClass('''\
             |@groovy.transform.Immutable(copyWith = true)
             |class Person {
-            |    String first, last
+            |    String firstname, lastname
             |    List<Person> copyWith( i ) {
             |        (1..i).collect { this }
             |    }
@@ -852,13 +853,13 @@ final class ImmutableTransformTest {
             |'''.stripMargin())
 
         // One instance
-        def tim = tester.newInstance( first:'tim', last:'yates' )
-        assert tim.first == 'tim'
+        def tim = tester.newInstance( firstname:'tim', lastname:'yates' )
+        assert tim.firstname == 'tim'
 
         // Check original copyWith remains
         def result = tim.copyWith( 2 )
         assert result.size() == 2
-        assert result.first == [ 'tim', 'tim' ]
+        assert result.firstname == [ 'tim', 'tim' ]
     }
 
     @Test
@@ -867,7 +868,7 @@ final class ImmutableTransformTest {
             |@groovy.transform.Immutable(copyWith = true)
             |@groovy.transform.CompileStatic
             |class Person {
-            |    String first, last
+            |    String firstname, lastname
             |    List<Person> copyWith( i ) {
             |        (1..i).collect { this }
             |    }
@@ -875,13 +876,13 @@ final class ImmutableTransformTest {
             |'''.stripMargin())
 
         // One instance
-        def tim = tester.newInstance( first:'tim', last:'yates' )
-        assert tim.first == 'tim'
+        def tim = tester.newInstance( firstname:'tim', lastname:'yates' )
+        assert tim.firstname == 'tim'
 
         // Check original copyWith remains
         def result = tim.copyWith( 2 )
         assert result.size() == 2
-        assert result.first == [ 'tim', 'tim' ]
+        assert result.firstname == [ 'tim', 'tim' ]
     }
 
     @Test
@@ -890,7 +891,7 @@ final class ImmutableTransformTest {
             |@groovy.transform.Immutable(copyWith = true)
             |@groovy.transform.TypeChecked
             |class Person {
-            |    String first, last
+            |    String firstname, lastname
             |    List<Person> copyWith( i ) {
             |        (1..i).collect { this }
             |    }
@@ -898,13 +899,13 @@ final class ImmutableTransformTest {
             |'''.stripMargin())
 
         // One instance
-        def tim = tester.newInstance( first:'tim', last:'yates' )
-        assert tim.first == 'tim'
+        def tim = tester.newInstance( firstname:'tim', lastname:'yates' )
+        assert tim.firstname == 'tim'
 
         // Check original copyWith remains
         def result = tim.copyWith( 2 )
         assert result.size() == 2
-        assert result.first == [ 'tim', 'tim' ]
+        assert result.firstname == [ 'tim', 'tim' ]
     }
 
     // GROOVY-6293
